--- a/project.html
+++ b/project.html
@@ -26,7 +26,6 @@
     <main id="contents">
       <section class="website">
         <h2>첫 웹사이트</h2>
-        <p>처음으로 만들어본 웹사이트 입니다.</p>
         <p>
           <a href="https://web-demo2-eight.vercel.app/" target=""
             >https://web-demo2-eight.vercel.app/</a
@@ -36,13 +35,18 @@
 
       <section class="website">
         <h2>html 웹사이트</h2>
-        <p>두 번째로 만들어본 웹사이트 입니다.</p>
-        <p>html에 집중하여 만들었습니다.</p>
         <p>
           <a href="https://html-phi-sable.vercel.app/" target=""
             >https://html-phi-sable.vercel.app/</a
           >
         </p>
+        <section class="website">
+          <h2>개인 포트폴리오 웹사이트</h2>
+          <p>
+            <a href="https://web-portpolio.vercel.app/" target=""
+              >https://web-portpolio.vercel.app/</a
+            >
+          </p>
       </section>
     </main>
   </body>
