--- a/team.html
+++ b/team.html
@@ -34,7 +34,12 @@
             >https://github.com/yebeen547</a
           >
         </p>
-        <p><b>Website:</b> <a href="" target="_blank"></a></p>
+        <p>
+          <b>Website:</b>
+          <a href="https://web-portpolio.vercel.app/" target=""
+            >https://web-portpolio.vercel.app/</a
+          >
+        </p>
       </section>
 
       <section class="member">
