--- a/project.html
+++ b/project.html
@@ -26,27 +26,25 @@
     <main id="contents">
       <section class="website">
         <h2>첫 웹사이트</h2>
-        <p>
-          <a href="https://web-demo2-eight.vercel.app/" target=""
-            >https://web-demo2-eight.vercel.app/</a
-          >
-        </p>
+        <a href="https://web-demo2-eight.vercel.app/" target=""
+          >https://web-demo2-eight.vercel.app/</a
+        >
       </section>
-
       <section class="website">
         <h2>html 웹사이트</h2>
-        <p>
-          <a href="https://html-phi-sable.vercel.app/" target=""
-            >https://html-phi-sable.vercel.app/</a
-          >
-        </p>
-        <section class="website">
-          <h2>개인 포트폴리오 웹사이트</h2>
-          <p>
-            <a href="https://web-portpolio.vercel.app/" target=""
-              >https://web-portpolio.vercel.app/</a
-            >
-          </p>
+        <a href="https://html-phi-sable.vercel.app/" target=""
+          >https://html-phi-sable.vercel.app/</a
+        >
+      </section>
+      <section class="website">
+        <h2>개인 포트폴리오 웹사이트</h2>
+        <a href="https://web-portpolio.vercel.app/" target=""
+          >https://web-portpolio.vercel.app/</a
+        >
+      </section>
+      <section class="website">
+        <h2>팀 웹사이트</h2>
+        <a href="https:팀웹사이트" target="">https:웹사이트</a>
       </section>
     </main>
   </body>
