--- a/team.html
+++ b/team.html
@@ -44,8 +44,18 @@
 
       <section class="member">
         <h2>92410914정효민</h2>
-        <p><b>GitHub:</b> <a href="" target="_blank"></a></p>
-        <p><b>Website:</b> <a href="" target="_blank"></a></p>
+        <p>
+          <b>GitHub:</b>
+          <a href="https://github.com/EHWkddl" target="_blank"
+            >https://github.com/EHWkddl</a
+          >
+        </p>
+        <p>
+          <b>Website:</b>
+          <a href="https://web-portfolio-amber-five.vercel.app/" target="_blank"
+            >https://web-portfolio-amber-five.vercel.app/</a
+          >
+        </p>
       </section>
     </main>
     <section class="project">
