--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
       </section>
       <section class="website">
         <h2>팀 웹사이트</h2>
-        <a href="https:팀웹사이트" target="">https:웹사이트</a>
+        <a href="https:https://team-project-rho-one.vercel.app/" target="">https:https://team-project-rho-one.vercel.app/</a>
       </section>
     </main>
   </body>
