--- a/team.html
+++ b/team.html
@@ -58,13 +58,13 @@
         </p>
       </section>
     </main>
-    <section class="project">
-      <h2>팀 프로젝트 소개</h2>
-      <p><b>프로젝트 :</b> 프로젝트이름</p>
-      <p><b>설명:</b> 설명설명설명</p>
+   <section class="project">
+      <h2>팀 프로젝트</h2>
       <p>
         <b>웹사이트:</b>
-        <a href="" target=""> https:우리 팀 웹사이트 </a>
+        <a href="https://team-project-rho-one.vercel.app/" target="">
+          https://team-project-rho-one.vercel.app/
+        </a>
       </p>
     </section>
   </body>
